Fix long name overflow

--- a/public/css/light.scss
+++ b/public/css/light.scss
@@ -412,8 +412,7 @@ table {
 
 .jersey-number-popover {
 	font-size: 10px;
-	line-height: 18px;
-	vertical-align: 4%;
+	line-height: 16px;
 }
 
 .watch,
